--- a/demo/customer/talk.html
+++ b/demo/customer/talk.html
@@ -3,7 +3,7 @@
 </script>
 <script charset="utf-8" src="talk.js"></script>
 <link rel="stylesheet" href="talk.css">
-<body onload="load()">
+<body>
 <div class="main-container">
 <div class="main-content">
 </div>
