actID and bizID

--- a/demo/customer/talk.html
+++ b/demo/customer/talk.html
@@ -1,5 +1,7 @@
 <script type="">
 	const talk_customer_url='http://localhost:8080/customer'
+	const talk_act_id='actIDDemo'
+	const talk_biz_id='bizIDDemo'
 </script>
 <script charset="utf-8" src="talk.js"></script>
 <link rel="stylesheet" href="talk.css">
